# vision-ai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: train.yml
common/: model.py
datasets/yolo/crack/: data.yaml
datasets/yolo/crack/labels/test/: 1649.rf.29f9249a177fa0f77f033a1ec79b4473.txt  1658.rf.3fc8f35e43f809f49c315d16b8aae9a5.txt  1675.rf.f820d4b3f2bf1511a053d425adfccbec.txt  1680.rf.e16683e2baeb09d7b834f6fe59ae89ba.txt  1686.rf.5333e8ce36e6056914fd87b5e7b89582.txt  1699.rf.34c4fb79e278294cc6d2687dd2bf1bce.txt  1706.rf.4eabf508869b6d5431bd4f5abae74b44.txt  1716.rf.d09a8b8faf26415dfd3e1b3127fdd5dc.txt  1717.rf.d46acf531a69188fe42df06d3ac107c4.txt  1722.rf.2f3cbeed8a75b19dc4b5d2bbf73babbc.txt
datasets/yolo/crack/labels/train/: 10.rf.f0b182d5a78d6adc75e97f0f2314be9f.txt  1177.rf.6daeef2df5d75eefd4541cfc0b87d4e7.txt  1212.rf.090891b9f8930b63e7b4ca5a1e657114.txt  1231.rf.128106df968aa70ceed75da0e63dddfb.txt  1267.rf.56c6af391770f327e81755205464d4a2.txt  1282.rf.57fd7d16bfc0e5608d0b086be53dffa9.txt  1283.rf.659d0f096bd5efb8d9b047e5fc5e62fa.txt  1316.rf.549df90ae69c2bdc3aacfffb5e2393f9.txt  1325.rf.1e13aac9121ed364d837344565838e28.txt  1368.rf.9f16e2d5fc0c4068665b21a2c907c452.txt  1385.rf.08f14bbfa97ef4899891fff543f0d834.txt  1386.rf.519821ff0dac3fff141c82ebd8f7a9ca.txt  1390.rf.322429c395411f0846e27b004d16d5eb.txt  141.rf.1f4b799a46b3015f49d48109ad1fe85c.txt  1411.rf.1925f609cb7e16fa36f2d1a1ee2dacbb.txt  1444.rf.88d536239aaf1ebf843bf9455e994aa8.txt  1468.rf.3155bf4e81a07c39d2a7b87338355d93.txt  1557.rf.10d82cc2d84158069151b6096801a524.txt  1603.rf.3af76369edafa227b85524b01c8739e4.txt  1607.rf.7d0ad2fe068f3287adcacd66a10ce92b.txt  1608.rf.40fd9efc8212371de115fec0c0bfbf09.txt  1613.rf.05cc13b8e4e69fc69eef48e1e1aa64ab.txt  1614.rf.28de0245df6b2a5d57b12e31b684c25d.txt  1617.rf.96a8cfc56161a524f31b562b082e9a9d.txt  1627.rf.53db5d6744b31396d0f02e1135f08969.txt  165.rf.604c0b4f8729f25b95bfca7f08c7a05f.txt  168.rf.4628e342e05cadb58f7bf9a1ea64b6f5.txt  776.rf.cd4f565b9ce4a077cc56cbabbb6aaa95.txt  785.rf.84ef52dfd1883344b688527449b36ab2.txt  795.rf.9230ed718f46436fa784f7df716125eb.txt
datasets/yolo/crack/labels/valid/: 1604.rf.b3a82801065a16369dd5535ff27a4bb9.txt  1605.rf.2a8f65a8d8e7daffa47e79775baf657e.txt  1610.rf.4c98f90bc6e2877d4a0a0c79e052c554.txt  1616.rf.01076132657d8625e2a27c15549bd8bb.txt  1619.rf.ebecc5c3d7604460f079c7d9e5a1b1bd.txt  (+5 more)
instance-segmentation/: dataset.py  test.py  train.py  visualize.py
semantic-segmentation/: dataset.py  test.py  train.py  visualize.py
(+10 files in other folders)
